fixed scroll, form on smallest screens

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -45,10 +45,10 @@ button:hover {
         height: auto;
     }
     .contact-content {
-        width: 99vw;
+        width: 90vw;
     }
     input, textarea, button {
-        width: 90vw;
+        width: 88vw;
         font-size: 1rem;
     }
 }
