--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,6 +93,7 @@ footer {
     color: #89CFF0;
     text-align: center;
     text-decoration: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1800px) {
